Added hover effect to FAQ section.

--- a/index.html
+++ b/index.html
@@ -1687,19 +1687,19 @@
 		<br>
 		
 		<button class="accordionFAQs" data-toggle="collapse"
-		data-target="#collapseOne" >What is CodeIN Community? </button>
-		<div class="panelFAQs">
+		data-target="#collapseOne" id="hover" >What is CodeIN Community? </button>
+		<div class="panelFAQs" id="hover">
   			<p class="panelParaFAQs">CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts, where we organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies and share opportunities related to Internships and different tech programs.</p>
 		</div>
 
-		<button class="accordionFAQs">How to join the community as a member?</button>
+		<button class="accordionFAQs" id="hover" >How to join the community as a member?</button>
 		<div class="panelFAQs">
   			<p class="panelParaFAQs"><a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" >
 				
 				JOIN US NOW</a> on our discord server and becomea a valued member of our community. <br><a href="https://codeincommunity.bio.link/">CLICK HERE</a> to join us on your favourite platforms.  </p>
 		</div>
 
-		<button class="accordionFAQs">How to join the organising Team?</button>
+		<button class="accordionFAQs" id="hover">How to join the organising Team?</button>
 		<div class="panelFAQs">
 			<p class="panelParaFAQs">
 				  <a href="https://bit.ly/JoinCodeINCommunity">CLICK HERE </a> to join our Core Team<br>
@@ -1708,7 +1708,7 @@
 				  <b>Perks of joining our community -</b><br>
 			We always believe in rewarding people who are doing great in our community, and helping the students to learn and grow. We provide goodies to the best contributors and LOR based on their performance.</p>
 		</div>
-		<button class="accordionFAQs">What are the benefits of joining CodeIN Community?</button>
+		<button class="accordionFAQs" id="hover" >What are the benefits of joining CodeIN Community?</button>
 		<div class="panelFAQs">
   			<p class="panelParaFAQs"><ul >
 				<li class="FAQsLi">&#x25BA;&nbsp; MENTOR'S GUIDE & SUPPORT</li>
@@ -1720,7 +1720,7 @@
 				<br>
 			</ul>
 		</div>
-		<button class="accordionFAQs">What type of events do we conduct?</button>
+		<button class="accordionFAQs" id="hover">What type of events do we conduct?</button>
 		<div class="panelFAQs">
   			<p class="panelParaFAQs">We organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies.<a href="#events">CLICK HERE</a> to check Our Events.</p>
 		</div>
@@ -2088,7 +2088,9 @@
 		.nav-item a:active{
 			color: #ffd100 !important;
 		}
+		#hover:hover{background-color: #ffd100;}
 	</style>
+
 
 </body>
 </html>
