fixed scrolling past headings of sections on clicking navbar

--- a/index.html
+++ b/index.html
@@ -1747,7 +1747,7 @@
 	<!-- FAQs section ends	 -->
 
 	<!-- Contact Section Start -->
-	<section id="contact" class="section-padding bg-gray contactSection" data-aos="fade-up" data-aos-duration="1500">
+	<section id="contact" class="section-padding bg-gray contactSection"  data-aos-duration="1500">
 		<div class="text-center Contactsec">
 			<div class="section-header Contactsec text-center">
 					  <h2 class="text-dark wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
