fixed contact header text color

--- a/index.html
+++ b/index.html
@@ -1750,7 +1750,7 @@
 	<section id="contact" class="section-padding bg-gray contactSection" data-aos="fade-up" data-aos-duration="1500">
 		<div class="text-center Contactsec">
 			<div class="section-header Contactsec text-center">
-					  <h2 class="text_dark wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
+					  <h2 class="textdark wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
 					  <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 				  </div>
 			  <div class="row">
