Changed UI of 404 page

--- a/404.html
+++ b/404.html
@@ -10,55 +10,16 @@
         content="CodeIN Community is the Community of Coding Enthusiasts
 	 Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities and various upcoming opportunities to learn different technologies.">
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
+    <link rel="stylesheet" href="./404.css">
 
-        body {
-            text-align: center;
-            font-family: "Open Sans", sans-serif;
-        }
-
-        h1 {
-            color: #f63854;
-            font-size: 10em;
-            margin: 15vh auto 0vh auto;
-        }
-
-        h3 {
-            font-size: 2.2em;
-        }
-
-        a {
-            text-decoration: none;
-            font-size: 1.3em;
-            color: royalblue;
-        }
-
-        a:hover {
-            color: #f63854;
-
-        }
-
-        @media only screen and (min-width: 600px) {
-            h1 {
-                font-size: 15em;
-            }
-
-            h3 {
-                font-size: 3em;
-            }
-
-            a {
-                font-size: 1.5em;
-            }
-        }
-    </style>
 </head>
-
 <body>
-    <h1>404</h1>
-    <h3>Page not found!</h3>
-    <a href="/">Go to Home?</a>
+    <img src="./404.png" alt="">
+    <div class="wrapper">
+        <h1>Page not found!</h1>
+        <a href="/" class="btn">Go to Home?</a>
+
+    </div>
 </body>
 
 </html>
