--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
 	<!-- animate on scroll import -->
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<!-- animate on scroll import end -->
+	
+	<!--style for hovering over JOIN US-->
+	<style>
+		#joinus:hover{
+			text-shadow:white 1px 1px;
+			font-weight: bolder;
+			
+		}
+	</style>
 
 </head>
 
