Update hero-area of index.html

--- a/index.html
+++ b/index.html
@@ -200,10 +200,9 @@
 						<div class="contents">
 
 							<h2>CodeIN Community </h2>
-							<p>CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts.
-
-								Where we organize Open Source Programs, Hackathons, and Events on different emerging technologies.
-								Additionally, We share guided roadmaps, 1:1 Mentorship from Mentors, Resources to learn different technologies.
+							<p>CodeIN Community is a Community of more than 8,000+ Coding Enthusiasts,
+								where we organize Open Source Programs, Hackathons, and Events on various emerging technologies and domains.
+								Additionally, we share guided roadmaps, 1:1 Mentorship from Mentors and Resources to learn different technologies.
 
 
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
