--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
 					<div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
 						<div class="contents">
 
-							<h2>CodeIN Community </h2>
-							<p>CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts.
+							<h2 style="text-align:center">CodeIN Community </h2>
+							<p style="text-align:center">CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts.
 
 								Where we organize Open Source Programs, Hackathons, and Events on different emerging technologies.
 								Additionally, We share guided roadmaps, 1:1 Mentorship from Mentors, Resources to learn different technologies.
 
 
-							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
+							<div class="header-button" data-aos="fade-right" data-aos-duration="2000" style="text-align:center">
 
 								<a href="https://discord.com/servers/codein-community-831388874118660156" target="_blank" class="btn btn-common">
 									<i class="fa fa-brands fa-discord"></i>
@@ -219,7 +219,7 @@
 							</div>
 
 
-							<br>Join the community on Discord for interaction with students from all over India.
+							<br style="text-align:center">Join the community on Discord for interaction with students from all over India.
 
 
 							</p>
@@ -1764,6 +1764,7 @@
 	<!-- FAQs section ends	 -->
 
 	<!-- Contact Section Start -->
+	<div align="center">
 	<section id="contact" class="section-padding bg-gray contactSection" data-aos="fade-up" data-aos-duration="1500">
 		<div class="text-center Contactsec">
 			<div class="section-header Contactsec text-center">
@@ -1798,6 +1799,7 @@
 				  </div>
 			  </div>
 		  </div>
+		</div>
 	</section>
 	<!-- Contact Section End -->
 	<!-- Contributors section -->
