--- a/100daysofcode.html
+++ b/100daysofcode.html
@@ -495,10 +495,11 @@
 		<br><br>
     <div class="row">
       <div class="point point-1 col-md-6">
-        <h4>Top Performing participants will be receiving Goodies (T-shirt)👕+ Course Voucher+ Top Performer Certificate </h4>
+        <h4>Top Performing participants will be receiving Goodies( T-Shirt or Sipper or Mug or NoteBook (only 1)) + Course Voucher+ Top Performer Certificate </h4>
+      
       </div>
         <div class="col-md-6">
-          <img class="rules-img" src="assets/img/goodies.png">
+          <img class="rules-img" src="./assets/img/goodies (1).png">
         </div>
     </div>
       <br><br><hr><br><br>
