--- a/index.html
+++ b/index.html
@@ -1713,7 +1713,7 @@
 		<div class="panelFAQs">
   			<p class="panelParaFAQs"><a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" >
 				
-				JOIN US NOW</a> on our discord server and becomea a valued member of our community. <br><a href="https://codeincommunity.bio.link/">CLICK HERE</a> to join us on your favourite platforms.  </p>
+				JOIN US NOW</a> on our discord server and become a valued member of our community. <br><a href="https://codeincommunity.bio.link/">CLICK HERE</a> to join us on your favourite platforms.  </p>
 		</div>
 
 		<button class="accordionFAQs">How to join the organising Team?</button>
