Fixed bg-color and input shadow color in Contact section

--- a/index.html
+++ b/index.html
@@ -1474,7 +1474,7 @@
 				<div class="card-body">
 
 
-					<h5 class="card-title text-center text-dark">Join our Core Team</h5>
+					<h5 class="card-title text-center text_dark">Join our Core Team</h5>
 					<a href="https://bit.ly/JoinCodeINCommunity" class="btn btn-common opportunity_btn" type="button" target="_blank">
 
 
@@ -1490,7 +1490,7 @@
 				<div class="card-body">
 
 
-					<h5 class="card-title text-center text-dark">Join Our Mentor Team</h5>
+					<h5 class="card-title text-center text_dark">Join Our Mentor Team</h5>
 					<a href="https://forms.gle/5vst4FpM9qveehv4A" class="btn btn-common opportunity_btn" type="button" target="_blank">
 
 
@@ -1506,7 +1506,7 @@
 				<div class="card-body">
 
 
-					<h5 class="card-title text-center text-dark">Join Our Volunteer Team</h5>
+					<h5 class="card-title text-center text_dark">Join Our Volunteer Team</h5>
 					<a href="https://forms.gle/mmqAst945dqzHSYx6" class="btn btn-common opportunity_btn" type="button" target="_blank">
 
 
@@ -1767,7 +1767,7 @@
 	<section id="contact" class="section-padding bg-gray contactSection" data-aos="fade-up" data-aos-duration="1500">
 		<div class="text-center Contactsec">
 			<div class="section-header Contactsec text-center">
-					  <h2 class="textdark wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
+					  <h2 class="text_dark wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
 					  <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 				  </div>
 			  <div class="row">
