--- a/100daysofcode.html
+++ b/100daysofcode.html
@@ -519,10 +519,21 @@
 
      <div class="row">
       <div class="col-md-6">
-        <h4>All participants who completed the program will receive 100 days of code Completion Certificate and Course Voucher worth Rs.4000😍</h4>
+        <h4>Participants  completed the program will receive 100 days of code Completion Certificate and Course Voucher worth Rs.4000😍</h4>
       </div>
       <div class="col-md-6">
         <img class="rules-img" src="assets/img/certificate.png">
+      </div>
+     </div>
+
+     <br><br><hr><br><br>
+
+     <div class="row">
+      <div class="col-md-6">
+        <h4>All Participants will receive 100 days of code Participation Certificate. ✅</h4>
+      </div>
+      <div class="col-md-6">
+        <img class="rules-img" src="assets/img/part.png">
       </div>
      </div>
   </div>
