--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	<!-- Header Area wrapper Starts -->
 	<header id="header-wrap">
 		<!-- Navbar Start -->
-		<nav class="navbar navbar-expand-md bg-white fixed-top scrolling-navbar">
+		<nav class="navbar navbar-expand-md bg-dark fixed-top scrolling-navbar">
 			<div class="container">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<a href="index.html" class="navbar-brand"> <img src="./assets/img/logo-small.png"
