--- a/opportunity.html
+++ b/opportunity.html
@@ -199,7 +199,7 @@
                             CodeIN community is organizing the much-awaited "Winter Fest" on 19th
                             February.
                             This will be a 4-hour long event on DSA, Web Dev, App Dev, Cloud Computing and
-                            Community Discussions and win exciting rewards for Each Track🎁.</li>
+                            Community Discussions and win exciting rewards for Each Track🎁 and get a verified certificate of participation</li>
                         <li>
                             Winter Fest will consist of quizzes, contests, and rewards as well. Here are the
                             benefits of
