--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
 									<a id="hacktoberfest" target="_blank" href="./100daysofcode.html">
 										100 Days of code WINNERS
 									</a>
+									<a id="hacktoberfest" target="_blank" href="./giveaway.html">
+										Giveaway Winners
+									</a>
 							</div>
 						  </div>
 
