--- a/index.html
+++ b/index.html
@@ -1968,7 +1968,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="copyright-content">
-							<p>Copyright © 2022 <a rel="nofollow" href="#">CodeIN Community</a> All Right Reserved</p>
+							<p>Copyright © 2022 <a rel="nofollow" href="#">CodeIN Community</a> All Right Reserved Made in &#9829;
+</p>
 						</div>
 					</div>
 				</div>
