--- a/index.html
+++ b/index.html
@@ -1258,6 +1258,20 @@
 						  </div>
 						</div>
 					  </div>
+						 <div class="swiper-slide">
+						<div class="testimonial-item">
+						  <div class="img-thumb">
+							<img src="./assets/img/team/Ayushi.jpg" alt="">
+						  </div>
+						  <div class="info">
+							<h2 class="text-dark">Ayushi Srivastava
+							</h2>
+							<h3>firstly i attend the one bootcamp of CodeIn community in which there are four sesssion after this 
+							  I learned about what is full stack devloper and devlopment knowledge it would very helpful in my starting phase of devlopment 
+							  Thankyou so much CodeIn community for this Opportunity</h3>
+						  </div>
+						</div>
+					  </div>
 					  <div class="swiper-slide">
 						<div class="testimonial-item">
 						  <div class="img-thumb">
