--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,7 @@
 
 
 					<h5 class="card-title text-center text_dark">Join our Core Team</h5>
-					<a href="https://bit.ly/JoinCodeINCommunity" class="btn btn-common opportunity_btn" type="button" target="_blank">
+					<a href="https://forms.office.com/r/3zcm8YM8kq" class="btn btn-common opportunity_btn" type="button" target="_blank">
 
 
 						Join Us
