--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 							</div>
 
 
-							<br>Join the community on Discord for interaction with students from all over India.
+							<br>Join the community on Discord for interaction with developers from all over India.
 
 
 							</p>
