--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -688,7 +688,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="copyright-content">
-              <p>Copyright © 2022 <a rel="nofollow" href="#">CodeIN Community</a> All Right Reserved</p>
+              <p>Copyright © 2022 <a rel="nofollow" href="#">CodeIN Community</a> All Rights Reserved</p>
             </div>
           </div>
         </div>
