--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				<div class="row">
 					<div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
 						<div class="contents">
-
+							<div class="container_greeting">DEMO TEXT</div>
 							<h2>CodeIN Community </h2>
 							<p>CodeIN Community is a Community of more than 8,000+ Coding Enthusiasts,
 								where we organize Open Source Programs, Hackathons, and Events on various emerging technologies and domains.
