--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -698,9 +698,61 @@
   <!-- Footer Section End -->
 
   <!-- Go to Top Link -->
-  <a href="#" class="back-to-top">
+  <!-- <a href="#" class="back-to-top">
     <i class="lni-arrow-up"></i>
-  </a>
+  </a> -->
+
+  <button type="button" class="btn btn-warning btn-xs" id="btn-back-to-top">
+    <i class="fas fa-arrow-circle-up"></i>
+</button>
+
+<style>
+  #btn-back-to-top 
+  {
+  position: fixed;
+  bottom: 30px;
+  size: 10px;
+  right: 10px;
+  display: none;
+  color: azure;
+  }
+  #btn-back-to-top:hover{
+    background-color:azure;
+  }
+  #btn-back-to-top:hover i{
+    color: #ffd100;
+  }
+</style>
+
+<script>	
+		//Get the button
+		let mybutton = document.getElementById("btn-back-to-top");
+
+		// When the user scrolls down 20px from the top of the document, show the button
+		window.onscroll = function () {
+		scrollFunction();
+		};
+
+		function scrollFunction() {
+		if (
+		document.body.scrollTop > 0 ||
+		document.documentElement.scrollTop > 1000
+		) {
+		mybutton.style.display = "block";
+		} else {
+		mybutton.style.display = "none";
+		}
+		}
+		// When the user clicks on the button, scroll to the top of the document
+		mybutton.addEventListener("click", backToTop);
+
+		function backToTop() {
+		document.body.scrollTop = 0;
+		document.documentElement.scrollTop = 0;
+		}
+	</script>
+
+
   <!-- Preloader -->
   <div id="preloader">
     <div class="loader" id="loader-1"></div>
