Added a new blog about web dev

--- a/blog.html
+++ b/blog.html
@@ -444,6 +444,34 @@
       </div>
 
     </div>
+	  
+    <!-- blog 11-->
+    <div class="blog" data-aos="fade-up" data-aos-duration="1500">
+
+      <div class="image" style="max-width: 50rem;">
+        <img src="assets/img/blog/webdev.jpg" alt="Programming Sites">
+
+      </div>
+      <div class="blog_content" id="content">
+
+        <div class="head">
+          
+          Web Development Process: A Step-by-Step guide
+        </div>
+
+        <div class="description">
+          Just like the blog title says – if you’re a code newbie looking for insight on all things web development, you’re in the right place.
+           Take a peek and you may walk away with information on how to develop a new skill!
+        </div>
+
+        <a href="https://www.freecodecamp.org/news/beginners-roadmap-web-development/"
+          class="read_btn align-items-center justify-content-center mt-5 " data-aos="fade-up">Go to Blog</a>
+
+
+
+      </div>
+
+    </div>
     
   </div>
 
