--- a/giveaway.html
+++ b/giveaway.html
@@ -148,7 +148,7 @@
 
     <div class="icon">
       
-        <img src="./assets/img/about/img4.svg" width="500" height="700" alt="benefit" style="margin-right: 150px;">
+        <img src="./assets/img/about/img4.svg" width="500" height="600" alt="benefit" style="margin-right: 150px; margin-top: -100px;">
         <br>
         <br>
     </div>
