--- a/blog.html
+++ b/blog.html
@@ -449,7 +449,7 @@
     <div class="blog" data-aos="fade-up" data-aos-duration="1500">
 
       <div class="image" style="max-width: 50rem;">
-        <img src="assets/img/blog/webdev.jpg" alt="Programming Sites">
+        <img src="assets/img/blog/web dev.png" alt="Programming Sites">
 
       </div>
       <div class="blog_content" id="content">
