made the image in the contact section visible

--- a/index.html
+++ b/index.html
@@ -1815,7 +1815,7 @@
 						</form>
 						</div>
 				  <div class="col-md-6 text-center">
-					  <img class="image-fluid bg-cont" src="/assets/img/Call_center-cuate.png">
+					  <img class="image-fluid bg-cont" src="./assets/img/Call_center-cuate.png">
 				  </div>
 			  </div>
 		  </div>
