--- a/index.html
+++ b/index.html
@@ -1661,10 +1661,10 @@
 						</a>
 					</div>
 					<div class="community_box box2" data-tilt data-tilt-scale="1.1">
-						<a href="https://gdsc.community.dev/kalindi-college-delhi/" style="text-decoration: none;"
-							target="_blank" title="GDC Kalindi">
-							<img src="./assets/img/Partners/GDSC_kalindi.webp" class="communityPartner__image"
-								alt="GDSC Kalinidi logo">
+						<a href="https://gdg.community.dev/gdg-kolkata/" style="text-decoration: none;"
+							target="_blank" title="GDG Kolkata">
+							<img src="./assets/img/Partners/download (5).png" class="communityPartner__image"
+								alt="GDG Kolkata logo">
 						</a>
 					</div>
 				</div>
