--- a/giveaway.html
+++ b/giveaway.html
@@ -791,7 +791,7 @@ Anushka Mishra
             <div class="col-md-12">
               <div class="copyright-content">
                 <p>
-                  Copyright © 2022
+                  Copyright © <span id="copyrightYear"></span>
                   <a rel="nofollow" href="#">CodeIN Community</a> All Right
                   Reserved
                 </p>
@@ -813,6 +813,11 @@ Anushka Mishra
       <div class="loader" id="loader-1"></div>
     </div>
     <!-- End Preloader -->
+
+    <script>
+      document.getElementById("copyrightYear").innerText =
+        new Date().getFullYear();
+    </script>
 
     <!-- emailjs cdn -->
     <script
