FIX: Join us links and html issue

--- a/index.html
+++ b/index.html
@@ -283,213 +283,112 @@
     <!-- Header Area wrapper End -->
 
     <!-- Services Section Start -->
-    <section id="services" class="section-padding">
-      <div class="container">
-        <div
-          class="section-header text-center"
-          data-aos="fade-up"
-          data-aos-duration="1500"
-        >
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">
-            Join Us Here
-          </h2>
-          <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+
+    <section id="services" class="services">
+      <h2>Join us here</h2>
+      <div class="service__box">
+        <div class="service__card">
+          <div class="service__icon">
+            <i class="fab fa-discord" style="color: #7289d9"> </i>
+          </div>
+          <div class="service__info">
+            <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank"
+              >discord
+            </a>
+            <p>
+              Join in the discord community and connect with like minded people
+              across the country.
+            </p>
+          </div>
         </div>
-        <div class="row">
-          <!-- Services item -->
-          <div
-            class="col-md-6 col-lg-4 col-xs-12"
-            data-aos="fade-up"
-            data-aos-duration="1500"
-          >
-            <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
-              <div class="icon">
-                <a href="https://discord.com/invite/sqFRzrj7f3" target="_blank">
-                  <i
-                    class="fab fa-discord"
-                    style="color: #7289d9"
-                    onmouseover="this.style.color='white'"
-                    onmouseout="this.style.color='#7289d9'"
-                  >
-                  </i>
-                </a>
-              </div>
-              <div class="services-content">
-                <h3>
-                  <a href="https://discord.com/invite/sqFRzrj7f3"
-                    >Discord Server</a
-                  >
-                </h3>
-                <p>
-                  Join in the discord community and connect with like minded
-                  people across the country.
-                </p>
-              </div>
-            </div>
+        <div class="service__card">
+          <div class="service__icon">
+            <i class="fab fa-telegram" style="color: #0088cc"></i>
           </div>
-          <!-- Services item -->
-          <div
-            class="col-md-6 col-lg-4 col-xs-12"
-            data-aos="fade-up"
-            data-aos-duration="1500"
-          >
-            <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
-              <div class="icon">
-                <a href="https://t.me/CodeINCommunity" target="_blank">
-                  <i
-                    class="fab fa-telegram"
-                    style="color: #0088cc"
-                    onmouseover="this.style.color='white'"
-                    onmouseout="this.style.color='#0088cc'"
-                  ></i>
-                </a>
-              </div>
-              <div class="services-content">
-                <h3>
-                  <a href="https://t.me/CodeINCommunity">Telegram Group</a>
-                </h3>
-                <p>
-                  Do not forget to follow us on telegram to stay updated about
-                  all the upcoming programs, openings and internships.
-                </p>
-              </div>
-            </div>
+          <div class="service__info">
+            <a
+              href="https://t.me/CodeINCommunity"
+              aria-label="telegram group"
+              target="_blank"
+              >Telegram
+            </a>
+            <p>
+              Do not forget to follow us on telegram to stay updated about all
+              the upcoming programs, openings and internships.
+            </p>
           </div>
-          <!-- Services item -->
-          <div
-            class="col-md-6 col-lg-4 col-xs-12"
-            data-aos="fade-up"
-            data-aos-duration="1500"
-          >
-            <div class="services-item wow fadeInRight" data-wow-delay="0.9s">
-              <div class="icon">
-                <a
-                  href="https://www.linkedin.com/company/codein-community/mycompany/"
-                  target="_blank"
-                >
-                  <i
-                    class="fab fa-linkedin"
-                    style="color: #0a66c2"
-                    onmouseover="this.style.color='white'"
-                    onmouseout="this.style.color='#0A66C2'"
-                  >
-                  </i>
-                </a>
-              </div>
-              <div class="services-content">
-                <h3>
-                  <a
-                    href="https://www.linkedin.com/company/codein-community/mycompany/"
-                    >LinkedIn Page</a
-                  >
-                </h3>
-                <p>
-                  Follow the official page of CodeIN Community where we
-                  regularly post about all the upcoming workshops and events.
-                </p>
-              </div>
-            </div>
+        </div>
+        <div class="service__card">
+          <div class="service__icon">
+            <i class="fab fa-github" style="color: #171515"> </i>
           </div>
-          <!-- Services item -->
-          <div
-            class="col-md-6 col-lg-4 col-xs-12"
-            data-aos="fade-up"
-            data-aos-duration="1500"
-          >
-            <div class="services-item wow fadeInRight" data-wow-delay="1.2s">
-              <div class="icon">
-                <a
-                  href="https://github.com/SauravMukherjee44/CodeIN-Community-Website"
-                  target="_blank"
-                >
-                  <i
-                    class="fab fa-github"
-                    style="color: #171515"
-                    onmouseover="this.style.color='white'"
-                    onmouseout="this.style.color='#171515'"
-                  ></i>
-                </a>
-              </div>
-              <div class="services-content">
-                <h3>
-                  <a
-                    href="https://github.com/SauravMukherjee44/CodeIN-Community-Website"
-                    >Open Source Project</a
-                  >
-                </h3>
-                <p>
-                  This is the GitHub repository of CodeIN Community Website
-                  built using HTML, CSS and JavaScript and is Open Source.
-                </p>
-              </div>
-            </div>
+          <div class="service__info">
+            <a
+              href="https://github.com/SauravMukherjee44/CodeIN-Community-Website"
+              target="_blank"
+              aria-label="gihub page"
+              >github
+            </a>
+            <p>
+              This is the GitHub repository of CodeIN Community Website built
+              using HTML, CSS and JavaScript and is Open Source.
+            </p>
           </div>
-          <!-- Services item -->
-          <div
-            class="col-md-6 col-lg-4 col-xs-12"
-            data-aos="fade-up"
-            data-aos-duration="1500"
-          >
-            <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
-              <div class="icon">
-                <a href="https://twitter.com/CodeinCommunity" target="_blank">
-                  <i
-                    class="fab fa-twitter"
-                    style="color: #1da1f2"
-                    ;
-                    onmouseover="this.style.color='white'"
-                    onmouseout="this.style.color='#1DA1F2'"
-                  ></i
-                ></a>
-              </div>
-              <div class="services-content">
-                <h3>
-                  <a href="https://twitter.com/CodeinCommunity">Twitter</a>
-                </h3>
-                <p>
-                  Follow the official Twitter Page of the CodeIN Community and
-                  stay updated.
-                </p>
-              </div>
-            </div>
+        </div>
+        <div class="service__card">
+          <div class="service__icon">
+            <i class="fab fa-linkedin" style="color: #0a66c2"> </i>
           </div>
-          <!-- Services item -->
-          <div
-            class="col-md-6 col-lg-4 col-xs-12"
-            data-aos="fade-up"
-            data-aos-duration="1500"
-          >
-            <div class="services-item wow fadeInRight" data-wow-delay="1.8s">
-              <div class="icon">
-                <a
-                  href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug"
-                  target="_blank"
-                >
-                  <i
-                    class="fab fa-youtube"
-                    style="color: #ff0000"
-                    onmouseover="this.style.color='white'"
-                    onmouseout="this.style.color='#FF0000'"
-                  ></i
-                ></a>
-              </div>
-              <div class="services-content">
-                <h3>
-                  <a
-                    href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug"
-                    >YouTube Content</a
-                  >
-                </h3>
-                <p>
-                  Subscribe to the Youtube channel to not miss any upcoming
-                  webinar, tech events and workshops.
-                </p>
-              </div>
-            </div>
+          <div class="service__info">
+            <a
+              href="https://www.linkedin.com/company/codein-community/mycompany/"
+              target="_blank"
+              aria-label="linkedin page"
+              >linkedin</a
+            >
+            <p>
+              Follow the official page of CodeIN Community where we regularly
+              post about all the upcoming workshops and events.
+            </p>
+          </div>
+        </div>
+        <div class="service__card">
+          <div class="service__icon">
+            <i class="fab fa-twitter" style="color: #1da1f2"></i>
+          </div>
+          <div class="service__info">
+            <a
+              href="https://twitter.com/CodeinCommunity"
+              target="_blank"
+              aria-label="twitter"
+              >twitter</a
+            >
+            <p>
+              Follow the official Twitter Page of the CodeIN Community and stay
+              updated.
+            </p>
+          </div>
+        </div>
+        <div class="service__card">
+          <div class="service__icon">
+            <i class="fab fa-youtube" style="color: #ff0000"></i>
+          </div>
+          <div class="service__info">
+            <a
+              href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug"
+              target="_blank"
+              aria-label="youtube channel"
+              >youtube
+            </a>
+            <p>
+              Subscribe to the Youtube channel to not miss any upcoming webinar,
+              tech events and workshops.
+            </p>
           </div>
         </div>
       </div>
     </section>
+
     <!-- Services Section End -->
 
     <!-- About Section start -->
