--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@
 				<div class="icon"><i class="fas fa-users"></i></div>
 				<div class="d-flex align-items-center">
 					<h1 class="counter">10000</h1>
-					<p style="font-size: 50px;"> +</p>
+					<p style="font-size: 50px;color: white;"> +</p>
 				</div>
 				<div class="text">Community members</div>
 			</div>
@@ -1542,7 +1542,7 @@
 				<div class="icon"><i class="far fa-calendar"></i></div>
 				<div class="d-flex align-items-center">
 					<h1 class="counter">45</h1>
-					<p style="font-size: 50px;"> +</p>
+					<p style="font-size: 50px;color: white;"> +</p>
 				</div>
 				<div class="text">Events</div>
 			</div>
@@ -1550,7 +1550,7 @@
 				<div class="icon"><i class="fas fa-graduation-cap"></i></div>
 				<div class="d-flex align-items-center">
 					<h1 class="counter">300</h1>
-					<p style="font-size: 50px;"> +</p>
+					<p style="font-size: 50px;color: white;"> +</p>
 				</div>
 				<div class="text">Opportunities Provided</div>
 			</div>
