--- a/index.html
+++ b/index.html
@@ -1671,9 +1671,9 @@
 
 				<div class="img_container" data-aos="fade-up" data-aos-duration="1500">
 					<div class="community_box box3" data-tilt data-tilt-scale="1.1">
-						<a href="https://linktr.ee/cs_sattva" style="text-decoration: none;" target="_blank" title="Sattva Kalindi">
-							<img src="./assets/img/Partners/Sattva.webp" class="communityPartner__image"
-								alt="Sattva logo">
+						<a href="https://chat.whatsapp.com/FhzDqb3WcA47SfX1i3MYhm" style="text-decoration: none;" target="_blank" title="Sattva Kalindi">
+							<img src="./assets/img/Partners/sos.jpg" class="communityPartner__image"
+								alt="SOS Tech">
 						</a>
 					</div>
 					<div class="community_box box4" data-tilt data-tilt-scale="1.1">
