--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@
 		<div class="oppurtunity_section">
 
 			<div class="card">
-				<img class="card-img-top" src="./assets/img/join_us/core.jpeg" alt="Core image">
+				<img class="card-img-top" src="./assets/img/join_us/core.png" alt="Core image">
 				<div class="card-body">
 
 
@@ -1504,7 +1504,7 @@
 			</div>
 
 			<div class="card">
-				<img class="card-img-top" src="./assets/img/join_us/volunteer.jpeg" alt="volunteer">
+				<img class="card-img-top" src="./assets/img/join_us/volunteer.png" alt="volunteer">
 				<div class="card-body">
 
 
