--- a/giveaway.html
+++ b/giveaway.html
@@ -327,7 +327,7 @@ Anushka Mishra
 
 <a href="https://codeincommunity.bio.link/"><button type="button" class="btn btn-common"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
 <br>
-<a href="https://codeincommunity.tech/#joinus"><button type="button" class="btn btn-common"><i class="material-icons pmd-sm"></i>Join our organising Team</button></a><br>
+<a href="https://codeincommunity.com/#joinus"><button type="button" class="btn btn-common"><i class="material-icons pmd-sm"></i>Join our organising Team</button></a><br>
 <br>
   
   </div>
