--- a/benefit.html
+++ b/benefit.html
@@ -232,7 +232,7 @@
 
 <a href="https://codeincommunity.bio.link/"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
 <br>
-<a href="https://codeincommunity.tech/#joinus"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join our organising Team</button></a><br>
+<a href="https://codeincommunity.com/#joinus"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join our organising Team</button></a><br>
 <br>
   
   </div>
