--- a/100daysofcode.html
+++ b/100daysofcode.html
@@ -495,7 +495,7 @@
 		<br><br>
     <div class="row">
       <div class="point point-1 col-md-6">
-        <h4>Top Performing participants will be receiving Goodies( T-Shirt or Sipper or Mug or NoteBook (only 1)) + Course Voucher+ Top Performer Certificate </h4>
+        <h4>Top Performing participants will be receiving Goodies (T-Shirt or Sipper or Mug or NoteBook ) + Course Voucher+ Top Performer Certificate </h4>
       
       </div>
         <div class="col-md-6">
@@ -532,11 +532,10 @@
       <div class="col-md-6">
         <h4>All Participants will receive 100 days of code Participation Certificate. ✅</h4>
       </div>
-      <div class="col-md-6">
-        <img class="rules-img" src="assets/img/part.png">
-      </div>
+      
      </div>
   </div>
+  
 </section>
 
 <br><br>
