--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
 	<meta property="og:url" content="https://codeincommunity.tech/">
 	<meta property="og:title" content="CodeIN Community">
 	<meta property="og:description" content="CodeIN Community is the Community of Coding Enthusiasts Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities, and various upcoming opportunities to learn different technologies.">
-
+        
+	<!-- open graph image for all social media -->
+	<meta property="og:image" itemprop="image" content="https://codeincommunity.com/assets/img/social-og.jpg">
+	<meta property="og:image:width" content="800" />
+	<meta property="og:image:height" content="420" />
+	<!-- open graph image for all social media -->
+	
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://codeincommunity.tech/">
