New team page created

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 	<section id="testimonial" class="testimonial section-padding">
 
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-			<h2 class="h2w section-title wow fadeInDown" data-wow-delay="0.3s">Meet Our Team</h2>
+			<h2 class="h2w section-title wow fadeInDown" data-wow-delay="0.3s">Meet Our Core Team</h2>
 			<div class="w shape wow fadeInDown" data-wow-delay="0.3s"></div>
 		</div>
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
@@ -1079,6 +1079,9 @@
 				</div>
 				<div class="swiper-button-next"></div>
 				<div class="swiper-button-prev"></div>
+				<button class="Cbtn text_dark" style="margin:20px auto 10px;border:none;" onClick="parent.location='teamMembers.html'">View All</button>
+
+
 			</div>
 		</div>
 
