--- a/index.html
+++ b/index.html
@@ -1098,17 +1098,17 @@
 						
 							<div class="testimonial-item founder-item col-lg-3 col-md-4 col-sm-12">
 								<div class="img-thumb">
-									<img src="./assets/img/team/vaibhav.webp" alt="Team members">
+									<img src="./assets/img/team/parul.jpeg" alt="Team members">
 								</div>
 								<div class="info">
-									<h2 class="text_dark"> Vaibhav Gupta </h2>
-									<h3> Tech Team </h3>
+									<h2 class="text_dark"> Parul Chadda </h2>
+									<h3> Co-Founder </h3>
 								</div>
 
 								<div class="media-icons">
-									<a href="https://github.com/vaibhavgupta2499" target="_blank"><i
+									<a href="https://github.com/parulchaddha" target="_blank"><i
 											class="fab fa-github"></i></a>
-									<a href="https://www.linkedin.com/in/vaibhav-gupta-98b5671b0"
+									<a href="https://www.linkedin.com/in/parulchaddha0904/"
 										target="_blank"><i class="fab fa-linkedin"></i></a>
 								</div>
 
