--- a/teamMembers.html
+++ b/teamMembers.html
@@ -20,7 +20,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Benefits of joining the CodeIN-Community">
-    <title>Giveaways</title>
+    <title>CodeIN Core Team</title>
     
 
    <!-- Bootstrap CSS -->
