--- a/teamMembers.html
+++ b/teamMembers.html
@@ -19,9 +19,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Benefits of joining the CodeIN-Community">
+    <meta name="description" content="Core Team Members of CodeIN Community">
     <title>CodeIN Core Team</title>
     
+	<!-- open graph image for all social media -->
+	<meta property="og:image" itemprop="image" content="https://codeincommunity.com/assets/img/social-og.jpg">
+	<meta property="og:image:width" content="800" />
+	<meta property="og:image:height" content="420" />
+	<!-- open graph image for all social media -->
 
    <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -146,7 +151,7 @@
 
 
 		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-			<h2 class="h2w section-title wow fadeInDown" data-wow-delay="0.3s">Meet Our Core Team</h2>
+			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Meet Our Core Team</h2>
 			<div class="w shape wow fadeInDown" data-wow-delay="0.3s"></div>
 		</div>
 
