--- a/teamMembers.html
+++ b/teamMembers.html
@@ -357,7 +357,7 @@
 
 										<div class="testimonial-item col-lg-3 col-md-4 col-sm-12">
 											<div class="img-thumb">
-												<img src="./assets/img/team/IMG_20220111_200114_117 - mr_pravin_ nag.jpg" class="lazyload"
+												<img src="./assets/img/team/IMG_20220827_185736 (1) (1) - P K (1).png" class="lazyload"
 													alt="">
 											</div>
 											<div class="info">
