--- a/teamMembers.html
+++ b/teamMembers.html
@@ -281,7 +281,7 @@
 
 										<div class="testimonial-item col-lg-3 col-md-4 col-sm-12">
 											<div class="img-thumb">
-												<img src="./assets/img/team/Nishtha_Pandey_PR_and_Outreach - NISHTHA PANDEY.jpeg" class="lazyload"
+												<img src="./assets/img/team/IMG-20221222-WA0017 - Nithish R.jpg" class="lazyload"
 													alt="">
 											</div>
 											<div class="info">
@@ -964,7 +964,7 @@
 										
 										<div class="testimonial-item col-lg-3 col-md-4 col-sm-12">
 											<div class="img-thumb">
-												<img src="./assets/img/team/IMG-20220909-WA0044 - Trivedi Bakul.jpg" class="lazyload"
+												<img src="./assets/img/team/shikha.jpg" class="lazyload"
 													alt="">
 											</div>
 											<div class="info">
